--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies App</title>
+    <link href="./index.scss">
 </head>
-<body>
+<body style="margin: 0;">
     <div id="root"></div>
 </body>
 </html>
